add favicon. Changes post sprint

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       rel="stylesheet"
       type="text/css"
     />
+    <link rel="icon" type="image/x-icon" href="src/favicon.ico"/>
   </head>
   <body class="body-home">
     <div class="coming-soon-position">Coming Soon</div>
@@ -30,7 +31,7 @@
       >
     </div>
     <script>
-      var gifImages = [
+      const gifImages = [
         "src/img/Img_frame_001.png",
         "src/img/Img_frame_002.png",
         "src/img/Img_frame_003.png",
