Resposividad con bootstrap

--- a/index.html
+++ b/index.html
@@ -2,18 +2,163 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>DANIELA PAZ PORTAFOLIO</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="src/img/styles/styles.css" />
     <link
       href="//db.onlinewebfonts.com/c/808d2427840352d64fbff2bc8dc40b2b?family=Object+Sans"
       rel="stylesheet"
       type="text/css"
     />
-    <link rel="icon" type="image/x-icon" href="src/favicon.ico"/>
+    <link rel="icon" type="image/x-icon" href="src/favicon.ico" />
   </head>
-  <body class="body-home">
-    <div class="coming-soon-position">Coming Soon</div>
+  <body>
+    <div>
+      <div class="row row-col-2">
+        <div class="col-7 col-sm-8 col-md-8 col-lg-10 col-xl-10 col-xxl-10">
+        </div>
+        <div class="coming-soon-position col-5 col-sm-4 col-md-4 col-lg-2 col-xl-2 col-xxl-2">
+          Coming Soon </div>
+      </div>
+    <div class="container-fluid">
+      <img src="src/img/daniela_paz.PNG" class="img-fluid daniela-paz" alt="Daniela-paz-PNG">
+    </div>
+    <div class="fotografa-position ps-4 col-sm-4 col-lg-5">Fotógrafa</div>
+
+    <div class="container">
+      <img class="img-fluid picture1 position-absolute top-50 start-50 translate-middle" id="picture1">
+    </div>
+    <div class="d-flex" style="height: 675px;">
+      <div class="vr"></div>
+    </div>
+       <footer class="bg-transparent">
+          <div class="row">
+            <div class="col-6 col-md-4 col-lg-3 col-xl-2">
+              <div class="d-flex align-items-start mb-2">
+                <div class="ms-1">
+                </div>
+                <h5 class="email-position">hola@danielapaz.site</h5>
+              </div>
+            </div>
+            <div class="col-6 col-md-4 col-lg-3 col-xl-3">
+              <div class="d-flex align-items-start mb-2">
+                <div class="ms-1">
+                </div>
+                <h5 class="phone-number-position ">+52 562363 7975</h5>
+              </div>
+            </div>
+            <div class="col-0 col-md col-lg-3  col-xl-5">
+              <div class="d-flex align-items-center mb-2">
+                <div class="me-1">
+                </div>
+                <h5 class="m-0"></h5>
+              </div>
+            </div>
+            <div class="col-12 col-md-2 col-lg-3 col-xl-2">
+              <div class="d-flex align-items-end mb-2">
+                <div class="me-1">
+                </div>
+                <h5 class="ig-position m-0">instagram</h5>
+              </div>
+            </div>
+      </footer>
+      </div>
+  
+<!--     <div class="hstack gap-3">
+      <div class="bg-transparent"></div>
+      <div class="bg-transparent"></div>
+      <div class="coming-soon-position bg-transparent">Coming Soon</div>
+    </div>
+		<nav class="navbar navbar-expand navbar-light bg-transparent">
+			<div class="container-fluid">
+        <a class="navbar-brand" href="index.html">
+					<img class="rounded-circle align-middle me-2" src="img/50x50.png" alt="">
+				</a>
+        <div class="coming-soon-position position-absolute">Coming Soon</div>
+				<a class="navbar-brand" href="index.html">
+					<img class="rounded-circle align-middle me-2" src="img/50x50.png" alt="">
+				</a>
+				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				<div class="collapse navbar-collapse" id="navbar">
+					<ul class="navbar-nav ms-auto">
+						<li class="nav-item active" aria-current="page">
+							<a class="nav-link" href="index.html"></a>
+						</li>
+						<li class="nav-item">
+							<div class="coming-soon-position">Coming Soon</div>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</nav>
+    <img src="src/img/daniela_paz.PNG" class="img-fluid daniela-paz" alt="Daniela-paz-PNG">
+    <div class="row mb-4">
+    <div class="col-12 col-lg-6 mb-4 mb-lg-0">
+      <img class="img-fluid rounded picture1" id="picture1">
+    </div>
+  </div>
+  <div class="row mb-4">
+    <div class="col-12 col-lg-6 mb-4 mb-lg-0">
+      <img class="picture1  img-fluid rounded" id="picture1">
+    </div>
+    <div class="picture-container col-12 col-lg-6">
+    </div>
+  </div>  
+		<div class="d-flex" style="height: 5px;">
+      <div class="vr"></div>
+    </div>
+    <div class="fotografa-position position-absolute">Fotógrafa</div>
+    <footer class="bg-transparent py-4">
+			<div class="container">
+				<div class="row">
+					<div class="col-12 col-md-6 col-xl-3">
+						<div class="d-flex align-items-center mb-2">
+							<div class="fa-layers fa-fw fa-2x me-1">
+								<i class="fas fa-circle text-muted"></i>
+								<i class="fas fa-code text-white" data-fa-transform="shrink-10"></i>
+							</div>
+							<h5 class="email-position m-0">hola@danielapaz.site</h5>
+						</div>
+					</div>
+					<div class="col-12 col-md-6 col-xl-3">
+						<div class="d-flex align-items-start mb-2">
+							<div class="me-3">
+							</div>
+							<h5 class="phone-number-position m-0">+52 562363 7975</h5>
+						</div>
+					</div>
+					<div class="col-12 col-md-6 col-xl-3">
+						<div class="d-flex align-items-center mb-2">
+							<div class="fa-layers fa-fw fa-2x me-1">
+								<i class="fas fa-circle text-muted"></i>
+								<i class="fas fa-images text-white" data-fa-transform="shrink-10"></i>
+							</div>
+							<h5 class="m-0"></h5>
+						</div>
+					</div>
+					<div class="col-12 col-md-6 col-xl-3">
+						<div class="d-flex align-items-center mb-2">
+							<div class="fa-layers fa-fw fa-2x me-1">
+								<i class="fas fa-circle text-muted"></i>
+								<i class="fas fa-video text-white" data-fa-transform="shrink-10"></i>
+							</div>
+							<h5 class="ig-position m-0">instagram</h5>
+						</div>
+					</div>
+				</div>
+      </div>
+		</footer> -->
+	
+    
+    <!-- <div class="coming-soon-position">Coming Soon</div>
     <img class="daniela-paz" src="src/img/daniela_paz.PNG" />
     <div class="picture-container">
       <img class="picture1" id="picture1" />
@@ -29,7 +174,12 @@
       <a href="https://www.instagram.com/amor.estgr/?hl=en" class="ig-position"
         >Instagram</a
       >
-    </div>
+    </div> -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
     <script>
       const gifImages = [
         "src/img/Img_frame_001.png",
@@ -47,8 +197,15 @@
         "src/img/Img_frame_013.png",
         "src/img/Img_frame_014.png",
         "src/img/Img_frame_015.png",
+        "src/img/Img_frame_016.png",
         "src/img/Img_frame_017.png",
         "src/img/Img_frame_018.png",
+        "src/img/Img_frame_019.png",
+        "src/img/Img_frame_020.png",
+        "src/img/Img_frame_021.png",
+        "src/img/Img_frame_022.png",
+        "src/img/Img_frame_023.png",
+        "src/img/Img_frame_024.png",
       ];
 
       var currentFrame = 0; //Call it a frame because we're making a gif and every image (so every array index) will be a frame
