--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" class="h-100">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -10,7 +10,7 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="src/img/styles/styles.css" />
+    <link rel="stylesheet" href="src/styles/styles.css" />
     <link
       href="//db.onlinewebfonts.com/c/808d2427840352d64fbff2bc8dc40b2b?family=Object+Sans"
       rel="stylesheet"
@@ -18,57 +18,7 @@
     />
     <link rel="icon" type="image/x-icon" href="src/favicon.ico" />
   </head>
-  <body>
-    <div>
-      <div class="row row-col-2">
-        <div class="col-7 col-sm-8 col-md-8 col-lg-10 col-xl-10 col-xxl-10">
-        </div>
-        <div class="coming-soon-position col-5 col-sm-4 col-md-4 col-lg-2 col-xl-2 col-xxl-2">
-          Coming Soon </div>
-      </div>
-    <div class="container-fluid">
-      <img src="src/img/daniela_paz.PNG" class="img-fluid daniela-paz" alt="Daniela-paz-PNG">
-    </div>
-    <div class="fotografa-position ps-4 col-sm-4 col-lg-5">Fotógrafa</div>
-
-    <div class="container">
-      <img class="img-fluid picture1 position-absolute top-50 start-50 translate-middle" id="picture1">
-    </div>
-    <div class="d-flex" style="height: 675px;">
-      <div class="vr"></div>
-    </div>
-       <footer class="bg-transparent">
-          <div class="row">
-            <div class="col-6 col-md-4 col-lg-3 col-xl-2">
-              <div class="d-flex align-items-start mb-2">
-                <div class="ms-1">
-                </div>
-                <h5 class="email-position">hola@danielapaz.site</h5>
-              </div>
-            </div>
-            <div class="col-6 col-md-4 col-lg-3 col-xl-3">
-              <div class="d-flex align-items-start mb-2">
-                <div class="ms-1">
-                </div>
-                <h5 class="phone-number-position ">+52 562363 7975</h5>
-              </div>
-            </div>
-            <div class="col-0 col-md col-lg-3  col-xl-5">
-              <div class="d-flex align-items-center mb-2">
-                <div class="me-1">
-                </div>
-                <h5 class="m-0"></h5>
-              </div>
-            </div>
-            <div class="col-12 col-md-2 col-lg-3 col-xl-2">
-              <div class="d-flex align-items-end mb-2">
-                <div class="me-1">
-                </div>
-                <h5 class="ig-position m-0">instagram</h5>
-              </div>
-            </div>
-      </footer>
-      </div>
+  <body class="d-flex flex-column h-100">
   
 <!--     <div class="hstack gap-3">
       <div class="bg-transparent"></div>
@@ -175,6 +125,54 @@
         >Instagram</a
       >
     </div> -->
+    <main class="flex-shrink-0">
+      <div class="container-fluid overflow-hidden">
+      <div class="row row-col-2">
+        <div class="col-6 col-sm-8 col-md-8 col-lg-10 col-xl-10 col-xxl-10">
+        </div>
+        <div class="coming-soon-position col-6 col-sm-4 col-md-4 col-lg-2 col-xl-2 col-xxl-2">
+          Coming Soon </div>
+      </div>
+      <img src="src/img/daniela_paz.PNG" class="img-fluid daniela-paz" alt="Daniela-paz-PNG">
+    <div class="fotografa-position ps-4 col-sm-4 col-lg-5">Fotógrafa</div>      
+      <img class="img-fluid picture1 position-absolute top-50 start-50 translate-middle" id="picture1">
+          <div class="row row-col-4 position-absolute container-fluid fixed-bottom">
+            <div class="col-12 col-md-4 col-lg-3 col-xl-2">
+              <div class="d-flex align-items-start mb-2">
+                <div class="ms-1">
+                </div>
+                <a
+                class="email-position"
+                href="mailto:hola@danielapaz.site?subject=Hola Dani, me gustaría trabajar contigo">
+                    hola@danielapaz.site 
+                </a>
+              </div>
+            </div>
+            <div class="col-12 col-md-4 col-lg-3 col-xl-3">
+              <div class="d-flex align-items-start mb-2">
+                <div class="ms-1">
+                </div>
+                <h5 class="phone-number-position mt-2">+52 562363 7975</h5>
+              </div>
+            </div>
+            <div class="d-none d-sm-block col-md col-lg-3  col-xl-3">
+              <div class="d-flex align-items-center mb-2">
+                <div class="me-1">
+                </div>
+                <h5 class="m-0"></h5>
+              </div>
+            </div>
+            <div class="col-12 col-md-2 col-lg-3 col-xl-2">
+              <div class="d-flex align-items-end mb-2">
+                <div class="me-1">
+                </div>
+                <a href="https://www.instagram.com/amor.estgr/?hl=en" class="ig-position m-0"> 
+                  Instagram </a>
+              </div>
+            </div>
+      </div>
+
+    </main>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
@@ -220,7 +218,5 @@
 
       setInterval(changePicture, 500);
     </script>
-
-    <main class="container"></main>
   </body>
 </html>
