fixing position and height

--- a/index.html
+++ b/index.html
@@ -127,14 +127,18 @@
     </div> -->
     <main class="flex-shrink-0">
       <div class="container-fluid overflow-hidden">
-      <div class="row row-col-2">
-        <div class="col-6 col-sm-8 col-md-8 col-lg-10 col-xl-10 col-xxl-10">
+      <div class="position-relative row">
+        <div class="position-absolute top-0 start-0 col-8 col-sm-8 col-md-8 col-lg-10 col-xl-10 col-xxl-10">
         </div>
-        <div class="coming-soon-position col-6 col-sm-4 col-md-4 col-lg-2 col-xl-2 col-xxl-2">
+        <div class="coming-soon-position w-auto position-absolute top-0 end-0 col-4 col-sm-4 col-md-4 col-lg-2 col-xl-2 col-xxl-2">
           Coming Soon </div>
       </div>
-      <img src="src/img/daniela_paz.PNG" class="img-fluid daniela-paz" alt="Daniela-paz-PNG">
-    <div class="fotografa-position ps-4 col-sm-4 col-lg-5">Fotógrafa</div>      
+      <div class="row">
+      <img src="src/img/daniela_paz.PNG" class="img-fluid ps-2 mt-4 daniela-paz" alt="Daniela-paz-PNG"></div>
+      <div class="row">
+    <div class="fotografa-position ps-2 col-sm-2 col-lg-5">Fotógrafa</div>
+  </div>  
+    </div>    
       <img class="img-fluid picture1 position-absolute top-50 start-50 translate-middle" id="picture1">
           <div class="row row-col-4 position-absolute container-fluid fixed-bottom">
             <div class="col-12 col-md-4 col-lg-3 col-xl-2">
@@ -155,7 +159,7 @@
                 <h5 class="phone-number-position mt-2">+52 562363 7975</h5>
               </div>
             </div>
-            <div class="d-none d-sm-block col-md col-lg-3  col-xl-3">
+            <div class="d-none d-sm-block col-md col-lg-3  col-xl-5">
               <div class="d-flex align-items-center mb-2">
                 <div class="me-1">
                 </div>
