arreglo ig link

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
               <div class="d-flex align-items-end mb-2">
                 <div class="me-1">
                 </div>
-                <a href="https://www.instagram.com/amor.estgr/?hl=en" class="ig-position m-0"> 
+                <a href="https://www.instagram.com/todaelhambre/" class="ig-position m-0" target="_blank"> 
                   Instagram </a>
               </div>
             </div>
