cambios de posicionamiento de imagen

--- a/index.html
+++ b/index.html
@@ -1,26 +1,21 @@
 <!DOCTYPE html>
 <html lang="en" class="h-100">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>DANIELA PAZ PORTAFOLIO</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="src/styles/styles.css" />
-    <link
-      href="//db.onlinewebfonts.com/c/808d2427840352d64fbff2bc8dc40b2b?family=Object+Sans"
-      rel="stylesheet"
-      type="text/css"
-    />
-    <link rel="icon" type="image/x-icon" href="src/favicon.ico" />
-  </head>
-  <body class="d-flex flex-column h-100">
-  
-<!--     <div class="hstack gap-3">
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>DANIELA PAZ PORTAFOLIO</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
+  <link rel="stylesheet" href="src/styles/styles.css" />
+  <link href="//db.onlinewebfonts.com/c/808d2427840352d64fbff2bc8dc40b2b?family=Object+Sans" rel="stylesheet"
+    type="text/css" />
+  <link rel="icon" type="image/x-icon" href="src/favicon.ico" />
+</head>
+
+<body class="d-flex flex-column h-100">
+
+  <!--     <div class="hstack gap-3">
       <div class="bg-transparent"></div>
       <div class="bg-transparent"></div>
       <div class="coming-soon-position bg-transparent">Coming Soon</div>
@@ -106,9 +101,9 @@
 				</div>
       </div>
 		</footer> -->
-	
-    
-    <!-- <div class="coming-soon-position">Coming Soon</div>
+
+
+  <!-- <div class="coming-soon-position">Coming Soon</div>
     <img class="daniela-paz" src="src/img/daniela_paz.PNG" />
     <div class="picture-container">
       <img class="picture1" id="picture1" />
@@ -125,102 +120,111 @@
         >Instagram</a
       >
     </div> -->
-    <main class="flex-shrink-0">
-      <div class="container-fluid overflow-hidden">
+  <main class="flex-shrink-0">
+    <div class="container-fluid overflow-hidden">
       <div class="position-relative row">
         <div class="position-absolute top-0 start-0 col-8 col-sm-8 col-md-8 col-lg-10 col-xl-10 col-xxl-10">
         </div>
-        <div class="coming-soon-position w-auto position-absolute top-0 end-0 col-4 col-sm-4 col-md-4 col-lg-2 col-xl-2 col-xxl-2">
+        <div
+          class="coming-soon-position w-auto position-absolute top-0 end-0 col-4 col-sm-4 col-md-4 col-lg-2 col-xl-2 col-xxl-2">
           Coming Soon </div>
       </div>
       <div class="row">
-      <img src="src/img/daniela_paz.PNG" class="img-fluid ps-2 mt-4 daniela-paz" alt="Daniela-paz-PNG"></div>
-      <div class="row">
-    <div class="fotografa-position ps-2 col-sm-2 col-lg-5">Fotógrafa</div>
-  </div>  
-    </div>    
-      <img class="img-fluid picture1 position-absolute top-50 start-50 translate-middle" id="picture1">
-          <div class="row row-col-4 position-absolute container-fluid fixed-bottom">
-            <div class="col-12 col-md-4 col-lg-3 col-xl-2">
-              <div class="d-flex align-items-start mb-2">
-                <div class="ms-1">
-                </div>
-                <a
-                class="email-position"
-                href="mailto:hola@danielapaz.site?subject=Hola Dani, me gustaría trabajar contigo">
-                    hola@danielapaz.site 
-                </a>
-              </div>
-            </div>
-            <div class="col-12 col-md-4 col-lg-3 col-xl-3">
-              <div class="d-flex align-items-start mb-2">
-                <div class="ms-1">
-                </div>
-                <h5 class="phone-number-position mt-2">+52 562363 7975</h5>
-              </div>
-            </div>
-            <div class="d-none d-sm-block col-md col-lg-3  col-xl-5">
-              <div class="d-flex align-items-center mb-2">
-                <div class="me-1">
-                </div>
-                <h5 class="m-0"></h5>
-              </div>
-            </div>
-            <div class="col-12 col-md-2 col-lg-3 col-xl-2">
-              <div class="d-flex align-items-end mb-2">
-                <div class="me-1">
-                </div>
-                <a href="https://www.instagram.com/todaelhambre/" class="ig-position m-0" target="_blank"> 
-                  Instagram </a>
-              </div>
-            </div>
+        <img src="src/img/daniela_paz.PNG" class="img-fluid ps-2 mt-4 daniela-paz" alt="Daniela-paz-PNG">
       </div>
+      <div class="container-fluid w-sm-25 w-50 h-25">
+      <img class="img-fluid picture1 h-75 position-absolute top-50 start-50 translate-middle" id="picture1">
+      </div> <!-- para volver a como estaba antes hay que poner h-75 arriba -->
+      <div class="row">
+        <div class="fotografa-position ps-2 col-sm-2 col-lg-5">Fotógrafa</div>
+      </div>
+    </div>
+    <div class="footer row row-col-4 position-absolute container-fluid fixed-bottom">
+      <div class="position-absolute bottom-0 start-0 col-12 col-md-4 col-lg-3 col-xl-2">
+        <div class="d-flex align-items-start mb-2">
+          <div class="ms-1">
+          </div>
+          <a
+          class="email-position"
+          href="mailto:hola@danielapaz.site?subject=Hola Dani, me gustaría trabajar contigo">
+              hola@danielapaz.site 
+          </a>
+        </div>
+      </div>
+      <div class="position-absolute bottom-0 start-50 translate-middle-x col-12 col-md-4 col-lg-3 col-xl-3">
+        <div class="d-flex align-items-start mb-2">
+          <div class="ms-1">
+          </div>
+          <h5 class="phone-number-position mt-2">+52 562363 7975</h5>
+        </div>
+      </div>
+      <div class="d-none d-sm-block col-md col-lg-3  col-xl-5">
+        <div class="d-flex align-items-center mb-2">
+          <div class="me-1">
+          </div>
+          <h5 class="m-0"></h5>
+        </div>
+      </div>
+      <div class="position-absolute bottom-0 end-0 col-12 col-md-2 col-lg-3 col-xl-2">
+        <div class="d-flex align-items-end mb-2">
+          <div class="me-1">
+          </div>
+          <a href="https://www.instagram.com/todaelhambre/" class="ig-position m-0" target="_blank"> 
+            Instagram </a>
+        </div>
+      </div>
+</div>
 
-    </main>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-      crossorigin="anonymous"
-    ></script>
-    <script>
-      const gifImages = [
-        "src/img/Img_frame_001.png",
-        "src/img/Img_frame_002.png",
-        "src/img/Img_frame_003.png",
-        "src/img/Img_frame_004.png",
-        "src/img/Img_frame_005.png",
-        "src/img/Img_frame_006.png",
-        "src/img/Img_frame_007.png",
-        "src/img/Img_frame_008.png",
-        "src/img/Img_frame_009.png",
-        "src/img/Img_frame_010.png",
-        "src/img/Img_frame_011.png",
-        "src/img/Img_frame_012.png",
-        "src/img/Img_frame_013.png",
-        "src/img/Img_frame_014.png",
-        "src/img/Img_frame_015.png",
-        "src/img/Img_frame_016.png",
-        "src/img/Img_frame_017.png",
-        "src/img/Img_frame_018.png",
-        "src/img/Img_frame_019.png",
-        "src/img/Img_frame_020.png",
-        "src/img/Img_frame_021.png",
-        "src/img/Img_frame_022.png",
-        "src/img/Img_frame_023.png",
-        "src/img/Img_frame_024.png",
-      ];
 
-      var currentFrame = 0; //Call it a frame because we're making a gif and every image (so every array index) will be a frame
-      function changePicture() {
-        document.getElementById("picture1").src = gifImages[currentFrame]; //Get the gif element and set its source to the current frame
-        currentFrame++; //Increase the current frame by 1
-        if (currentFrame >= gifImages.length) {
-          //If we've gone past the end of our array of frames, then:
-          currentFrame = 0; //Reset back to frame 0
-        }
+  </main>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"></script>
+  <script>
+    const gifImages = [
+      "src/img/Img_frame_001.jpg",
+      "src/img/Img_frame_002.jpg",
+      "src/img/Img_frame_003.jpg",
+      "src/img/Img_frame_004.jpg",
+      "src/img/Img_frame_005.jpg",
+      "src/img/Img_frame_006.jpg",
+      "src/img/Img_frame_007.jpg",
+      "src/img/Img_frame_008.jpg",
+      "src/img/Img_frame_009.jpg",
+      "src/img/Img_frame_010.jpg",
+      "src/img/Img_frame_011.jpg",
+      "src/img/Img_frame_012.jpg",
+      "src/img/Img_frame_013.jpg",
+      "src/img/Img_frame_014.jpg",
+      "src/img/Img_frame_015.jpg",
+      "src/img/Img_frame_016.jpg",
+      "src/img/Img_frame_017.jpg",
+      "src/img/Img_frame_018.jpg",
+      "src/img/Img_frame_019.jpg",
+      "src/img/Img_frame_020.jpg",
+      "src/img/Img_frame_021.jpg",
+      "src/img/Img_frame_022.jpg",
+      "src/img/Img_frame_023.jpg",
+      "src/img/Img_frame_024.jpg",
+      "src/img/Img_frame_025.jpg",
+      "src/img/Img_frame_026.jpg",
+    ];
+
+    var currentFrame = 0; //Call it a frame because we're making a gif and every image (so every array index) will be a frame
+    function changePicture() {
+      document.getElementById("picture1").src = gifImages[currentFrame]; //Get the gif element and set its source to the current frame
+      currentFrame++; //Increase the current frame by 1
+      if (currentFrame >= gifImages.length) {
+        //If we've gone past the end of our array of frames, then:
+        currentFrame = 0; //Reset back to frame 0
       }
+    }
 
-      setInterval(changePicture, 500);
-    </script>
-  </body>
+    setInterval(changePicture, 500);
+  </script>
+</body>
+
 </html>
+
+
+
