ultimos cambios pre sprint

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link href="//db.onlinewebfonts.com/c/808d2427840352d64fbff2bc8dc40b2b?family=Object+Sans" rel="stylesheet"
     type="text/css" />
   <link rel="icon" type="image/x-icon" href="src/favicon.ico" />
+  <script src="https://kit.fontawesome.com/1296203093.js" crossorigin="anonymous"></script>
 </head>
 
 <body class="d-flex flex-column h-100">
@@ -124,6 +125,7 @@
     <div class="container-fluid overflow-hidden">
       <div class="position-relative row">
         <div class="position-absolute top-0 start-0 col-8 col-sm-8 col-md-8 col-lg-10 col-xl-10 col-xxl-10">
+<!--           ESPACIO VACIO -->
         </div>
         <div
           class="coming-soon-position w-auto position-absolute top-0 end-0 col-4 col-sm-4 col-md-4 col-lg-2 col-xl-2 col-xxl-2">
@@ -132,18 +134,30 @@
       <div class="row">
         <img src="src/img/daniela_paz.PNG" class="img-fluid ps-2 mt-4 daniela-paz" alt="Daniela-paz-PNG">
       </div>
-      <div class="container-fluid w-sm-25 w-50 h-25">
-      <img class="img-fluid picture1 h-75 position-absolute top-50 start-50 translate-middle" id="picture1">
+      <div class="figure">
+      <img class="figure-img img-fluid picture1 h-75 position-absolute top-50 start-50 translate-middle" id="picture1">
       </div> <!-- para volver a como estaba antes hay que poner h-75 arriba -->
       <div class="row">
         <div class="fotografa-position ps-2 col-sm-2 col-lg-5">Fotógrafa</div>
       </div>
     </div>
-    <div class="footer row row-col-4 position-absolute container-fluid fixed-bottom">
-      <div class="position-absolute bottom-0 start-0 col-12 col-md-4 col-lg-3 col-xl-2">
+    <div class="position-absolute container-fluid fixed-bottom row">
+        <a
+          class="w-0 ps-0 mb-0 h-0 col-12 col-md-7 col-lg-4 col-xl-4 email-position"
+          href="mailto:hola@danielapaz.site?subject=Hola Dani, me gustaría trabajar contigo"
+          >
+          hola@danielapaz.site </a>
+        <div class="w-0 ps-0 ps-lg-2 mb-2 h-0 col-12 col-md-5 col-lg-6 col-xl-5 phone-number-position ">
+          +52 562363 7975 </div>
+        <div class="d-none d-sm-block col-md col-lg-2  col-xl-2">
+        </div>
+    </div>
+    <div class="position-absolute bottom-0 end-0 w-0 mb-2">
+      <a href="https://www.instagram.com/todaelhambre/" class="me-2 ig-position" target="_blank"> Instagram </a>
+    </div>    
+  <!--   <div class="footer row row-col-4 position-absolute container-fluid fixed-bottom">
+      <div class="w-0 p-0 h-0 col-12 col-md-4 col-lg-3 col-xl-2 email-position ">
         <div class="d-flex align-items-start mb-2">
-          <div class="ms-1">
-          </div>
           <a
           class="email-position"
           href="mailto:hola@danielapaz.site?subject=Hola Dani, me gustaría trabajar contigo">
@@ -151,30 +165,26 @@
           </a>
         </div>
       </div>
-      <div class="position-absolute bottom-0 start-50 translate-middle-x col-12 col-md-4 col-lg-3 col-xl-3">
+      <div class="w-0 h-0 p-0 row-col-12 col-md-4 col-lg-3 col-xl-3">
         <div class="d-flex align-items-start mb-2">
-          <div class="ms-1">
-          </div>
           <h5 class="phone-number-position mt-2">+52 562363 7975</h5>
         </div>
       </div>
-      <div class="d-none d-sm-block col-md col-lg-3  col-xl-5">
+      <div class="d-none d-sm-block row col-md col-lg-3  col-xl-5">
         <div class="d-flex align-items-center mb-2">
           <div class="me-1">
           </div>
           <h5 class="m-0"></h5>
         </div>
       </div>
-      <div class="position-absolute bottom-0 end-0 col-12 col-md-2 col-lg-3 col-xl-2">
+      <div class="w-0 p-0 h-0 row-col-12 col-md-2 col-lg-3 col-xl-2">
         <div class="d-flex align-items-end mb-2">
-          <div class="me-1">
-          </div>
-          <a href="https://www.instagram.com/todaelhambre/" class="ig-position m-0" target="_blank"> 
+          <a href="https://www.instagram.com/todaelhambre/" class="ig-position h-0 m-0" target="_blank"> 
             Instagram </a>
         </div>
       </div>
 </div>
-
+ -->
 
   </main>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
