Cambio en fotos y sección fotografía

--- a/index.html
+++ b/index.html
@@ -16,114 +16,9 @@
 
 <body class="d-flex flex-column h-100">
 
-  <!--     <div class="hstack gap-3">
-      <div class="bg-transparent"></div>
-      <div class="bg-transparent"></div>
-      <div class="coming-soon-position bg-transparent">Coming Soon</div>
-    </div>
-		<nav class="navbar navbar-expand navbar-light bg-transparent">
-			<div class="container-fluid">
-        <a class="navbar-brand" href="index.html">
-					<img class="rounded-circle align-middle me-2" src="img/50x50.png" alt="">
-				</a>
-        <div class="coming-soon-position position-absolute">Coming Soon</div>
-				<a class="navbar-brand" href="index.html">
-					<img class="rounded-circle align-middle me-2" src="img/50x50.png" alt="">
-				</a>
-				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
-					<span class="navbar-toggler-icon"></span>
-				</button>
-				<div class="collapse navbar-collapse" id="navbar">
-					<ul class="navbar-nav ms-auto">
-						<li class="nav-item active" aria-current="page">
-							<a class="nav-link" href="index.html"></a>
-						</li>
-						<li class="nav-item">
-							<div class="coming-soon-position">Coming Soon</div>
-						</li>
-					</ul>
-				</div>
-			</div>
-		</nav>
-    <img src="src/img/daniela_paz.PNG" class="img-fluid daniela-paz" alt="Daniela-paz-PNG">
-    <div class="row mb-4">
-    <div class="col-12 col-lg-6 mb-4 mb-lg-0">
-      <img class="img-fluid rounded picture1" id="picture1">
-    </div>
-  </div>
-  <div class="row mb-4">
-    <div class="col-12 col-lg-6 mb-4 mb-lg-0">
-      <img class="picture1  img-fluid rounded" id="picture1">
-    </div>
-    <div class="picture-container col-12 col-lg-6">
-    </div>
-  </div>  
-		<div class="d-flex" style="height: 5px;">
-      <div class="vr"></div>
-    </div>
-    <div class="fotografa-position position-absolute">Fotógrafa</div>
-    <footer class="bg-transparent py-4">
-			<div class="container">
-				<div class="row">
-					<div class="col-12 col-md-6 col-xl-3">
-						<div class="d-flex align-items-center mb-2">
-							<div class="fa-layers fa-fw fa-2x me-1">
-								<i class="fas fa-circle text-muted"></i>
-								<i class="fas fa-code text-white" data-fa-transform="shrink-10"></i>
-							</div>
-							<h5 class="email-position m-0">hola@danielapaz.site</h5>
-						</div>
-					</div>
-					<div class="col-12 col-md-6 col-xl-3">
-						<div class="d-flex align-items-start mb-2">
-							<div class="me-3">
-							</div>
-							<h5 class="phone-number-position m-0">+52 562363 7975</h5>
-						</div>
-					</div>
-					<div class="col-12 col-md-6 col-xl-3">
-						<div class="d-flex align-items-center mb-2">
-							<div class="fa-layers fa-fw fa-2x me-1">
-								<i class="fas fa-circle text-muted"></i>
-								<i class="fas fa-images text-white" data-fa-transform="shrink-10"></i>
-							</div>
-							<h5 class="m-0"></h5>
-						</div>
-					</div>
-					<div class="col-12 col-md-6 col-xl-3">
-						<div class="d-flex align-items-center mb-2">
-							<div class="fa-layers fa-fw fa-2x me-1">
-								<i class="fas fa-circle text-muted"></i>
-								<i class="fas fa-video text-white" data-fa-transform="shrink-10"></i>
-							</div>
-							<h5 class="ig-position m-0">instagram</h5>
-						</div>
-					</div>
-				</div>
-      </div>
-		</footer> -->
-
-
-  <!-- <div class="coming-soon-position">Coming Soon</div>
-    <img class="daniela-paz" src="src/img/daniela_paz.PNG" />
-    <div class="picture-container">
-      <img class="picture1" id="picture1" />
-    </div>
-    <div class="fotografa-position">Fotógrafa</div>
-    <div class="footer">
-      <a
-        class="email-position"
-        href="mailto:hola@danielapaz.site?subject=Hola Dani, me gustaría trabajar contigo"
-        >hola@danielapaz.site</a
-      >
-      <div class="phone-number-position">+52 562363 7975</div>
-      <a href="https://www.instagram.com/amor.estgr/?hl=en" class="ig-position"
-        >Instagram</a
-      >
-    </div> -->
   <main class="flex-shrink-0">
     <div class="container-fluid overflow-hidden">
-      <div class="position-relative row">
+      <div class="position-relative row mb-1">
         <div class="position-absolute top-0 start-0 col-8 col-sm-8 col-md-8 col-lg-10 col-xl-10 col-xxl-10">
 <!--           ESPACIO VACIO -->
         </div>
@@ -134,13 +29,13 @@
       <div class="row">
         <img src="src/img/daniela_paz.PNG" class="img-fluid ps-2 mt-4 daniela-paz" alt="Daniela-paz-PNG">
       </div>
-      <div class="figure">
-      <img class="figure-img img-fluid picture1 h-75 position-absolute top-50 start-50 translate-middle" id="picture1">
-      </div> <!-- para volver a como estaba antes hay que poner h-75 arriba -->
-      <div class="row">
-        <div class="fotografa-position ps-2 col-sm-2 col-lg-5">Fotógrafa</div>
+      <div class="row pb-2">
+        <div class="fotografa-position ps-2 mb-sm-0 col-sm-2 col-lg-5">Fotógrafa</div>
       </div>
     </div>
+    <div class="figure">
+      <img class="figure-img img-fluid picture1 h-75 position-absolute top-50 start-50 translate-middle" id="picture1">
+      </div> <!-- para volver a como estaba antes hay que poner h-75 arriba -->
     <div class="position-absolute container-fluid fixed-bottom row">
         <a
           class="w-0 ps-0 mb-0 h-0 col-12 col-md-7 col-lg-4 col-xl-4 email-position"
@@ -152,39 +47,10 @@
         <div class="d-none d-sm-block col-md col-lg-2  col-xl-2">
         </div>
     </div>
-    <div class="position-absolute bottom-0 end-0 w-0 mb-2">
+    <div class="position-absolute bottom-0 end-0 mb-2">
       <a href="https://www.instagram.com/todaelhambre/" class="me-2 ig-position" target="_blank"> Instagram </a>
     </div>    
-  <!--   <div class="footer row row-col-4 position-absolute container-fluid fixed-bottom">
-      <div class="w-0 p-0 h-0 col-12 col-md-4 col-lg-3 col-xl-2 email-position ">
-        <div class="d-flex align-items-start mb-2">
-          <a
-          class="email-position"
-          href="mailto:hola@danielapaz.site?subject=Hola Dani, me gustaría trabajar contigo">
-              hola@danielapaz.site 
-          </a>
-        </div>
-      </div>
-      <div class="w-0 h-0 p-0 row-col-12 col-md-4 col-lg-3 col-xl-3">
-        <div class="d-flex align-items-start mb-2">
-          <h5 class="phone-number-position mt-2">+52 562363 7975</h5>
-        </div>
-      </div>
-      <div class="d-none d-sm-block row col-md col-lg-3  col-xl-5">
-        <div class="d-flex align-items-center mb-2">
-          <div class="me-1">
-          </div>
-          <h5 class="m-0"></h5>
-        </div>
-      </div>
-      <div class="w-0 p-0 h-0 row-col-12 col-md-2 col-lg-3 col-xl-2">
-        <div class="d-flex align-items-end mb-2">
-          <a href="https://www.instagram.com/todaelhambre/" class="ig-position h-0 m-0" target="_blank"> 
-            Instagram </a>
-        </div>
-      </div>
-</div>
- -->
+
 
   </main>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
@@ -192,32 +58,32 @@
     crossorigin="anonymous"></script>
   <script>
     const gifImages = [
-      "src/img/Img_frame_001.jpg",
-      "src/img/Img_frame_002.jpg",
-      "src/img/Img_frame_003.jpg",
-      "src/img/Img_frame_004.jpg",
-      "src/img/Img_frame_005.jpg",
-      "src/img/Img_frame_006.jpg",
-      "src/img/Img_frame_007.jpg",
-      "src/img/Img_frame_008.jpg",
-      "src/img/Img_frame_009.jpg",
-      "src/img/Img_frame_010.jpg",
-      "src/img/Img_frame_011.jpg",
-      "src/img/Img_frame_012.jpg",
-      "src/img/Img_frame_013.jpg",
-      "src/img/Img_frame_014.jpg",
-      "src/img/Img_frame_015.jpg",
-      "src/img/Img_frame_016.jpg",
-      "src/img/Img_frame_017.jpg",
-      "src/img/Img_frame_018.jpg",
-      "src/img/Img_frame_019.jpg",
-      "src/img/Img_frame_020.jpg",
-      "src/img/Img_frame_021.jpg",
-      "src/img/Img_frame_022.jpg",
-      "src/img/Img_frame_023.jpg",
-      "src/img/Img_frame_024.jpg",
-      "src/img/Img_frame_025.jpg",
-      "src/img/Img_frame_026.jpg",
+      "src/img/Img_frame_001.png",
+      "src/img/Img_frame_002.png",
+      "src/img/Img_frame_003.png",
+      "src/img/Img_frame_004.png",
+      "src/img/Img_frame_005.png",
+      "src/img/Img_frame_006.png",
+      "src/img/Img_frame_007.png",
+      "src/img/Img_frame_008.png",
+      "src/img/Img_frame_009.png",
+      "src/img/Img_frame_010.png",
+      "src/img/Img_frame_011.png",
+      "src/img/Img_frame_012.png",
+      "src/img/Img_frame_013.png",
+      "src/img/Img_frame_014.png",
+      "src/img/Img_frame_015.png",
+      "src/img/Img_frame_016.png",
+      "src/img/Img_frame_017.png",
+      "src/img/Img_frame_018.png",
+      "src/img/Img_frame_019.png",
+      "src/img/Img_frame_020.png",
+      "src/img/Img_frame_021.png",
+      "src/img/Img_frame_022.png",
+      "src/img/Img_frame_023.png",
+      "src/img/Img_frame_024.png",
+      "src/img/Img_frame_025.png",
+      "src/img/Img_frame_026.png",
     ];
 
     var currentFrame = 0; //Call it a frame because we're making a gif and every image (so every array index) will be a frame
