agregado el media query y solucionado el problema del hover del link de instagram

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       </div> <!-- para volver a como estaba antes hay que poner h-75 arriba -->
     <div class="position-absolute container-fluid fixed-bottom row">
         <a
-          class="w-0 ps-0 mb-0 h-0 col-12 col-md-7 col-lg-4 col-xl-4 email-position"
+          class="w-0 ps-0 mb-0 h-0 col-12 col-md-4 col-lg- col-xl-3 email-position"
           href="mailto:hola@danielapaz.site?subject=Hola Dani, me gustaría trabajar contigo"
           >
           hola@danielapaz.site </a>
@@ -47,8 +47,8 @@
         <div class="d-none d-sm-block col-md col-lg-2  col-xl-2">
         </div>
     </div>
-    <div class="position-absolute bottom-0 end-0 mb-2">
-      <a href="https://www.instagram.com/todaelhambre/" class="me-2 ig-position" target="_blank"> Instagram </a>
+    <div class="fixed-bottom">
+      <a href="https://www.instagram.com/todaelhambre/" class="position-absolute bottom-0 end-0 mb-2 me-2 ig-position" target="_blank"> Instagram </a>
     </div>    
 
 
